--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Build middleware for expres more expressive.",
   "main": "index.js",
   "scripts": {
+    "example": "node ./example/app.js",
     "test": "mocha ./test/tests.js"
   },
   "keywords": [
@@ -16,6 +17,9 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.0.0"
+    "express": "^4.14.0",
+    "js-yaml": "^3.6.1",
+    "mocha": "^3.0.0",
+    "swagger-tools": "^0.10.1"
   }
 }
