--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
+    "chance": "^1.0.4",
     "express": "^4.14.0",
     "js-yaml": "^3.6.1",
+    "lodash": "^4.15.0",
     "mocha": "^3.0.0",
     "swagger-tools": "^0.10.1"
   }
