update example query goods api

--- a/example/docs/api-goods.yml
+++ b/example/docs/api-goods.yml
@@ -6,6 +6,10 @@ paths:
       operationId: listGoods
       parameters:
         - in: query
+          name: category
+          type: string
+          required: false
+        - in: query
           name: pageIndex
           type: integer
           required: false
