--- a/example/docs/api-goods.yml
+++ b/example/docs/api-goods.yml
@@ -13,10 +13,14 @@ paths:
           name: pageIndex
           type: integer
           required: false
+          default: 1
+          minimum: 1
         - in: query
           name: pageSize
           type: integer
           required: false
+          default: 50
+          maximum: 50
       responses:
         200:
           $ref: "#/responses/GoodsQueryResultResponse"
