--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "lodash": "^4.15.0",
     "mocha": "^3.0.0",
     "swagger-tools": "^0.10.1"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
