--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "bluebird": "^3.4.1",
     "chai": "^3.5.0",
     "chance": "^1.0.4",
+    "coveralls": "^2.11.12",
     "express": "^4.14.0",
     "js-yaml": "^3.6.1",
     "lodash": "^4.15.0",
     "mocha": "^3.0.0",
+    "mocha-lcov-reporter": "^1.2.0",
     "swagger-tools": "^0.10.1"
   },
   "publishConfig": {
