--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "example": "node ./example/app.js",
-    "test": "mocha ./test/tests.js"
+    "test": "mocha ./test/tests.js",
+    "test-cover": "istanbul cover _mocha -- -R spec -u exports ./test/tests.js"
   },
   "keywords": [
     "expro",
@@ -27,6 +28,7 @@
     "chance": "^1.0.4",
     "coveralls": "^2.11.12",
     "express": "^4.14.0",
+    "istanbul": "^0.4.5",
     "js-yaml": "^3.6.1",
     "lodash": "^4.15.0",
     "mocha": "^3.0.0",
